--- a/feudalis-styles.css
+++ b/feudalis-styles.css
@@ -9,7 +9,7 @@
 }
 
 .sheet_feudalis {
-  background: linear-gradient(to right, rgba(238,233,218,0) 20%, rgba(238,233,218,0.5) 40%, rgba(238,233,218,0.5) 100%), url('https://i.imgur.com/QA1N0H3.jpg') repeat-y;
+  background: linear-gradient(to right, rgba(238,233,218,0) 20%, rgba(238,233,218,0.5) 40%, rgba(238,233,218,0.5) 100%), url('medium-bg.jpg') repeat-y;
   width: 100%;
   padding: 0rem 5rem 4rem 20%;
   box-sizing: border-box;
@@ -94,7 +94,7 @@ textarea {
 
 /* SHEET HEADER */
 .sheet-header {
-  background-image: url("https://raw.githubusercontent.com/olafvantol/roll20-character-sheets/master/HarnMaster3/scroll-wide.png");
+  background-image: url("scroll-wide.png");
   background-repeat: no-repeat;
   background-size: 600px 220px;
   height: 200px;
@@ -221,7 +221,7 @@ input[type=number] {
 }
 
 .vigor, .ardor {
-  background-image: url('https://i.imgur.com/Hz8rP3D.png');
+  background-image: url('MAE-FRAME2.png');
   width: 100px;
   height: 100px;
   margin-bottom: 3rem;
@@ -378,7 +378,7 @@ textarea.sheet-short-textarea {
   }
   
   .sheet-rolltemplate-feudalis .sheet-rolltemplate-feudalis-background {
-    background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255, 255, 255, 0.6) 40%, rgba(255,255,255,0.6) 100%), url('https://i.imgur.com/40iNv1A.jpg');
+    background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255, 255, 255, 0.6) 40%, rgba(255,255,255,0.6) 100%), url('rolltemplate-bg.jpg');
     background-position: top left;
     background-repeat: no-repeat;
     border-spacing: 0;
